# itau-banking-agent

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  Makefile  README.md  main.py  stop.py
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 20260714_0001_initial.py  20260714_0002_step_up_challenges.py  20260715_0003_conversation_threads.py  20260715_0004_outbox.py  20260715_0005_audit_trace_nullable.py  20260715_0006_pending_operations.py  20260715_0007_pending_operation_recovery.py  20260715_0008_pix_transfers.py  20260715_0009_move_pix_tables_to_app_schema.py  20260715_0010_allow_pending_stepup_operations.py  20260716_0011_core_banking_read_model.py
backend/src/api/: app.py  banking_wiring.py  conversation_wiring.py  dependencies.py  event_wiring.py  identity_wiring.py  knowledge_wiring.py  main.py  problem.py  rate_limit.py
backend/src/api/routers/: agui.py  audit.py  auth.py  banking.py  health.py
backend/src/audit/adapters/inbound/: event_handler.py
backend/src/audit/application/: dto.py  event_mapper.py
backend/src/audit/application/ports/: audit_log_repository.py
backend/src/audit/application/use_cases/: consume_audit_event.py  query_audit.py
backend/src/audit/domain/: entities.py
backend/src/banking/adapters/outbound/: mcp_client.py
backend/src/banking/application/: confirmation.py  dto.py
backend/src/banking/application/ports/: banking_systems.py  confirmation_classifier.py  pending_operation_repository.py
backend/src/banking/application/use_cases/: execute_card_limit_change.py  execute_pix_transfer.py  expire_pending_operations.py  request_card_limit_change.py  request_pix_transfer.py
backend/src/banking/domain/: eligibility.py  errors.py  events.py  pending_operation.py  pix.py  values.py
backend/src/conversation/adapters/outbound/: demo_customer_reference.py
backend/src/conversation/application/: dto.py  json_repair.py  responses.py
backend/src/conversation/application/graph/: builder.py  dependencies.py  state.py  types.py
backend/src/conversation/application/ports/: llm.py  (+5 more)
backend/src/conversation/domain/: errors.py  events.py  history.py  input_guardrails.py  output_guardrails.py  tools.py  values.py
backend/src/identity_access/application/: dto.py
backend/src/identity_access/domain/: authorization.py  entities.py  errors.py  events.py  values.py
backend/src/knowledge/application/: dto.py
backend/src/knowledge/domain/: chunking.py  document.py  errors.py  events.py  retrieval.py  values.py
backend/src/mcp_server/: __init__.py  main.py  postgres_core.py  simulator.py
backend/src/shared/: config.py  container.py  demo_personas.py
backend/src/shared/adapters/: clock.py  database.py  event_bus.py  event_publisher.py  id_generator.py  langfuse_tracer.py  noop_tracer.py  outbox.py  outbox_relay.py
backend/src/shared/domain/: errors.py  events.py  outbox.py  result.py
backend/src/shared/logging/: masking.py  processors.py  setup.py
backend/src/shared/telemetry/: __init__.py  correlation.py  spans.py
backend/tests/: conftest.py
backend/tests/architecture/: test_import_contracts.py  test_security_structure.py
backend/tests/evals/agent/: suite1_intent.yaml  suite2_references.yaml  suite3_behavior.yaml
backend/tests/evals/rag/: golden.yaml
backend/tests/evals/rubrics/: behavior.md
backend/tests/fakes/: __init__.py  conversation.py  database.py  identity.py  knowledge.py  providers.py  telemetry.py
backend/tests/integration/: conftest.py
backend/tests/integration/audit/: test_audit_api.py  test_audit_delivery.py
backend/tests/integration/auth/: test_auth_api.py  test_seed_script.py
backend/tests/integration/banking/: conftest.py  test_pix_execution_races.py  test_uc2_limit_change_api.py  test_uc3_zero_mcp_call_api.py  test_uc4_pix_api.py
backend/tests/integration/checkpointer/: test_checkpointer_smoke.py
backend/tests/integration/conversation/: test_agui_api.py
backend/tests/integration/db/: test_migrations.py
backend/tests/integration/knowledge/: conftest.py  test_chroma_vector_store.py
backend/tests/integration/mcp/: test_mcp_contract.py
backend/tests/integration/shared/: test_outbox.py
backend/tests/unit/: test_local_launcher.py
backend/tests/unit/api/: test_agui_confirmation.py  test_auth_middleware.py  test_confirmation_classifier.py  test_health.py
backend/tests/unit/audit/: test_event_mapper.py  test_query_audit.py
backend/tests/unit/banking/: test_confirmation.py  test_eligibility.py  test_execute_card_limit_change.py  test_mcp_client.py  test_pending_operation.py  test_pix.py  test_request_card_limit_change.py  test_request_pix_transfer.py
backend/tests/unit/conversation/: test_adversarial_guardrails.py  test_demo_customer_reference.py  test_graph_routing.py  test_graph_tracing.py  test_guardrail_calibration.py  test_input_guardrails.py  test_llm_fallback.py  test_output_guardrails.py  test_run_turn.py  test_tool_registry.py  test_understand_parsing.py
backend/tests/unit/identity_access/: test_authenticate_token.py  test_authorization_matrix.py  test_authorize_action.py  test_jwt_codec.py  test_login.py  test_request_step_up.py  test_step_up_challenge.py  test_verify_step_up.py
backend/tests/unit/knowledge/: test_chunking.py  test_document_loader.py  test_ingest_knowledge_base.py  test_retrieve_knowledge.py
backend/tests/unit/mcp_server/: test_compose.py  test_simulator.py
backend/tests/unit/shared/: test_config.py  test_container.py  test_correlation.py  test_event_bus.py  test_event_publisher.py  test_events.py  test_langfuse_tracer.py  test_masking.py  test_outbox_relay.py  test_result.py  test_tracer_port.py
(+141 files in other folders)
