[project]
name = "itau-agent-backend"
version = "0.1.0"
description = "Intelligent banking agent — modular monolith backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "langgraph>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    # The checkpointer speaks psycopg, and psycopg needs a libpq wrapper at
    # runtime. `psycopg` alone resolves without one and fails at startup with
    # "no pq wrapper available" — so the `binary` extra is a runtime dependency,
    # not a test convenience (the image builds with `uv sync --no-dev`).
    "psycopg[binary]>=3.2",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "chromadb==1.0.15",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    "google-genai>=0.3",
    "langfuse>=2.60,<3",
    "mcp>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.9",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "import-linter>=2.1",
    "bandit>=1.8",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/shared",
    "src/identity_access",
    "src/conversation",
    "src/knowledge",
    "src/banking",
    "src/audit",
    "src/api",
    "src/mcp_server",
]

# ---------------------------------------------------------------- ruff
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TID", "RUF"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["shared", "identity_access", "conversation", "knowledge", "banking", "audit", "api", "mcp_server"]
plugins = ["pydantic.mypy"]

# Adapters and API wiring: standard strictness (frameworks fight --strict).
[[tool.mypy.overrides]]
module = ["*.adapters.*", "api.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disallow_any_generics = false

# The Langfuse SDK ships no py.typed marker. Confined to the one adapter that
# imports it — which is the point of having a port (ADR-010).
[[tool.mypy.overrides]]
module = ["langfuse.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: needs Docker (testcontainers)",
    "adversarial: permanent PRD-015 security regression case",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src"]

# ---------------------------------------------------------------- import-linter
[tool.importlinter]
include_external_packages = true
root_packages = [
    "shared",
    "identity_access",
    "conversation",
    "knowledge",
    "banking",
    "audit",
    "api",
    "mcp_server",
]

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (identity_access)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["identity_access"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (conversation)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["conversation"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (knowledge)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["knowledge"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (banking)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["banking"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (audit)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["audit"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Hexagonal layers: adapters -> application -> domain (shared)"
type = "layers"
layers = ["adapters", "application", "domain"]
containers = ["shared"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Domain imports no frameworks"
type = "forbidden"
source_modules = [
    "shared.domain",
    "identity_access.domain",
    "conversation.domain",
    "knowledge.domain",
    "banking.domain",
    "audit.domain",
]
forbidden_modules = [
    "fastapi",
    "langchain",
    "langchain_core",
    "langgraph",
    "langfuse",
    "chromadb",
    "httpx",
    "sqlalchemy",
    "pydantic_settings",
    "structlog",
    "asyncpg",
    "alembic",
]

[[tool.importlinter.contracts]]
name = "Modules are independent (no cross-module internals)"
type = "independence"
modules = [
    "identity_access",
    "conversation",
    "knowledge",
    "banking",
    "audit",
]

# ---------------------------------------------------------------- bandit
[tool.bandit]
exclude_dirs = ["tests"]
# B105 falsely flags the enum value ``PASS`` as a password. Real credential
# literals remain covered by gitleaks and the I5/O3 masking regression suite.
skips = ["B105"]
